// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`morph should morph shapes of bigger sizes 1`] = `
Array [
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      "type": "M",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 0,
        },
      },
      "type": "M",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 5,
          "y": 5,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 15,
          "y": 5,
        },
      },
      "type": "L",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 30,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 20,
          "y": 30,
        },
      },
      "type": "L",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 30,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 30,
          "y": 40,
        },
      },
      "type": "L",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 30,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 60,
          "y": 40,
        },
      },
      "type": "L",
    },
  },
]
`;

exports[`morph should morph shapes of equal sizes 1`] = `
Array [
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      "type": "M",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 0,
        },
      },
      "type": "M",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 5,
          "y": 5,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 15,
          "y": 5,
        },
      },
      "type": "L",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 30,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 20,
          "y": 30,
        },
      },
      "type": "L",
    },
  },
]
`;

exports[`morph should morph shapes of lesser sizes 1`] = `
Array [
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 0,
          "y": 0,
        },
      },
      "type": "M",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 0,
        },
      },
      "type": "M",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 5,
          "y": 5,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 15,
          "y": 5,
        },
      },
      "type": "L",
    },
  },
  Object {
    "from": Object {
      "point": Point {
        "position": Object {
          "x": 10,
          "y": 30,
        },
      },
      "type": "L",
    },
    "to": Object {
      "point": Point {
        "position": Object {
          "x": 15,
          "y": 5,
        },
      },
      "type": "L",
    },
  },
]
`;
